--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-src/CommandAPI/CmdAPI.db*
+src/CommandAPI/CmdAPI.db-*
 
 # User-specific files
 *.rsuser
