--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,13 @@ steps:
       projects: '**/*Tests/*.csproj'
       testRunTitle: 'xUnit Test Run'
 
+  - task: DotNetCoreCLI@2
+    displayName: 'dotnet publish'
+    inputs:
+      command: publish
+      publishWebProjects: false
+      projects: 'src/CommandAPI/*.csproj'
+      arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+
+  - task: PublishBuildArtifacts@1
+    displayName: 'publish artifacts'
