--- a/src/CommandAPI/appsettings.Development.json
+++ b/src/CommandAPI/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "sqliteConnection": "Data Source=./CmdAPI.db"
+    "sqliteConnection": "Data Source=CmdAPI.db"
   }
 }
